--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,4 @@ services:
         ports:
             - 5000:5000
         volumes:
-            - ./:/go/src/github.com/Zach-Johnson/go-docker-hot-reload-example
+            - ./:/go/src/go-docker-hot-reload
